...

    var body: some View {
        NavigationStack {
            VStack {
                if model.orders.isEmpty {
                    Text("No Orders available")
                        .accessibilityIdentifier("noOrdersText")
                } else {
                    List {
                        ForEach(model.orders) { order in

                            NavigationLink(value: order.id) {
                                OrderCellView(order: order)
...
                ToolbarItem(placement: .topBarTrailing) {
                    Button(action: {
                        isPresented = true
                    }, label: {
                        Image(systemName: "plus.square.fill")
                    })
                    .accessibilityIdentifier("addNewOrderButton")
                }
            }
            .navigationTitle("Orders")
            .navigationBarTitleDisplayMode(.inline)
        }
    }
...
